# toy_rdbms

./: README.md
relly/: Cargo.toml
relly/src/: bsearch.rs  btree.rs  buffer.rs  disk.rs  lib.rs  slotted.rs
relly/src/btree/: branch.rs  leaf.rs
