[package]
name = "relly"
version = "0.1.0"
authors = ["ytakasugi <sh7.tibi0129@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
zerocopy = { version = "0.7.33", features = ["derive"] }
bincode = "1.3"

[dev-dependencies]
tempfile = "3.1"
sha-1 = "0.10.1"
md-5 = "0.10.6"